hoanf thieenj model

--- a/BBM/home/templates/home/detail.html
+++ b/BBM/home/templates/home/detail.html
@@ -33,7 +33,7 @@
                         <p>{{court.decription}}</p>
 
                         <p class="py-2">
-                            <span class="list-inline-item text-dark">Rating: 4.8 <i class="fa fa-star text-warning"></i></span>
+                            <span class="list-inline-item text-dark">Rating: {{court.rateAvr}} <i class="fa fa-star text-warning"></i></span>
                         </p>
 
                         <form action="" method="GET">
