--- a/BBM/home/static/home/css/datsan.css
+++ b/BBM/home/static/home/css/datsan.css
@@ -133,11 +133,7 @@
      ========================================================================== */
 
   .bg-gra-01 {
-    background: -webkit-gradient(linear, left bottom, left top, from(#7dc66d), to(#128020));
-    background: -webkit-linear-gradient(bottom, #7dc66d 0%, #128020 100%);
-    background: -moz-linear-gradient(bottom, #7dc66d 0%, #128020 100%);
-    background: -o-linear-gradient(bottom, #7dc66d 0%, #128020 100%);
-    background: linear-gradient(to top, #7dc66d 0%, #128020 100%);
+    background: #effdf5
   }
   
   /* ==========================================================================
@@ -244,11 +240,11 @@
   }
   
   .btn--gradient {
-    background: linear-gradient(135deg, #7dc66d, #128020); 
+    background: #1abc9c; 
   }
   
   .btn--gradient:hover {
-    background: linear-gradient(135deg, #7dc66d, #128020);
+    background: #1abc9c;
   }
 
   /* ==========================================================================
@@ -363,7 +359,7 @@
   
   .label {
     color: #555;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 700;
   }
   
@@ -416,7 +412,7 @@
   
   .card-5 .card-heading {
     padding: 20px 0;
-    background: #1a1a1a;
+    background: #1abc9c;
     -webkit-border-top-left-radius: 10px;
     -moz-border-radius-topleft: 10px;
     border-top-left-radius: 10px;
@@ -458,21 +454,43 @@
 .hidden {
     display: none;
 }
-table {
-    border-collapse: collapse;
-    width: 100%;
-    margin-top: 10px;
-}
-th, td {
-    border: 1px solid #000;
-    padding: 10px;
+
+/* select */
+.select-container{
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    color: white;
+    text-align: center;
+    color: black;
+    margin-bottom: 20px;
+}
+
+.select-title {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.select-gird{
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    margin-top: 5px;
+    gap: 10px;
+    width: fit-content;
+    max-width: 100%;
+    justify-content: center;
+}
+
+.select-slot{
+    padding: 10px 20px;
+    border: 1.5px solid black;
+    border-radius: 5px;
+    color: black;
     cursor: pointer;
 }
-th {
-    background-color: #f2f2f2;
-}
-.selected {
-    background-color: #4CAF50;
-    color: white;
+
+.select-slot.selected{
+    background-color: #00ff77;
 }
