--- a/BBM/home/templates/home/filter.html
+++ b/BBM/home/templates/home/filter.html
@@ -10,9 +10,8 @@
 {%endblock%}
 
 {%block content%}
-{%include '../filter.html' %}
 <div class="row g-4">
-    {% for court in results %}
+    {% for court in courts %}
     <div class="col-lg-4 col-md-6 wow fadeInUp">
         <div class="property-court rounded overflow-hidden">
             <div class="position-relative overflow-hidden">
