--- a/BBM/home/templates/home/role1.html
+++ b/BBM/home/templates/home/role1.html
@@ -14,6 +14,7 @@
 {%endblock%}
 
 {%block content%}
+{%include '../filter.html' %}
 <div class="row g-4">
     {%for court in lc%}
         <div class="col-lg-4 col-md-6 wow fadeInUp">
